# CeCe-core

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cece/: CMakeLists.txt  config.hpp.in
cece/config/: CMakeLists.txt
cece/core/: AlignedAllocator.cpp  Assert.hpp  CMakeLists.txt  CliColor.cpp  CsvFile.cpp  CsvFile.hpp  DataExport.cpp  DataExport.hpp  DataExportCsv.cpp  ExpressionParser.cpp  ExpressionParser.hpp  FilePath.cpp  FilePath.hpp  PtrNamedContainer.hpp  Shape.hpp  ShapeToGrid.hpp  TimeMeasurement.cpp  TimeMeasurement.hpp  Tokenizer.hpp  UnitIo.cpp  UnitIo.hpp  Vector.hpp  VectorUnits.cpp
cece/core/test/: FilePathTest.cpp  TokenizerTest.cpp  VectorTest.cpp
cece/init/: CMakeLists.txt  Container.cpp  Container.hpp  Initializer.cpp
cece/loader/: CMakeLists.txt  Loader.cpp
cece/module/: CMakeLists.txt  Container.cpp  Container.hpp  ExportModule.cpp  Module.cpp  Module.hpp
cece/object/: BoundData.cpp  BoundData.hpp  CMakeLists.txt  ContactListener.cpp  ContactListener.hpp  Container.cpp  Container.hpp  Object.cpp  Object.hpp
cece/plugin/: CMakeLists.txt  Config.hpp  Context.cpp  Context.hpp  Library.cpp  Manager.cpp  definition.hpp
cece/program/: CMakeLists.txt
cece/render/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Circle.cpp  Color.cpp  Color.hpp  Context.cpp  Context.hpp  Lines.cpp  Object.hpp  PhysicsDebugger.hpp  Program.cpp  Shader.cpp  Texture.cpp  errors.hpp
cece/render/test/: ColorTest.cpp
cece/simulator/: CMakeLists.txt  ConverterBox2D.hpp  DefaultSimulation.cpp  DefaultSimulation.hpp  Simulation.cpp  Simulation.hpp  Simulator.cpp  Simulator.hpp  Visualization.cpp  Visualization.hpp  VisualizationLayer.hpp
scripts/: shader-convert.py
scripts/ci/: after_success-linux.sh  before_build-win32.bat  before_install-linux.sh  before_script-linux.sh  before_script-osx.sh  build_script-win32.bat  install-linux.sh  install-osx.sh  install-win32.bat  test_script-win32.bat
